Flip redirects: soymetaforica.com (non-www) is now canonical
- Redirect www.soymetaforica.com to soymetaforica.com
- Update all canonical URLs, meta tags, and sitemap to use non-www
- Update App.tsx baseUrl to non-www
- All www traffic will redirect to non-www (301 permanent)

--- a/vercel.json
+++ b/vercel.json
@@ -11,10 +11,10 @@
       "has": [
         {
           "type": "host",
-          "value": "soymetaforica.com"
+          "value": "www.soymetaforica.com"
         }
       ],
-      "destination": "https://www.soymetaforica.com/:path*",
+      "destination": "https://soymetaforica.com/:path*",
       "permanent": true
     },
     {
@@ -26,7 +26,7 @@
           "value": "http"
         }
       ],
-      "destination": "https://www.soymetaforica.com/:path*",
+      "destination": "https://soymetaforica.com/:path*",
       "permanent": true
     }
   ],
